--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
     </profiles>
 
     <properties>
+        <commons-lang.version>3.5</commons-lang.version>
         <java.version>1.8</java.version>
     </properties>
 
