--- a/xudong-web/pom.xml
+++ b/xudong-web/pom.xml
@@ -21,12 +21,24 @@
             <version>${xudong-domain.version}</version>
         </dependency>
 
-        <!-- evanframework -->
         <dependency>
-            <groupId>org.evanframework</groupId>
-            <artifactId>evan-cache</artifactId>
-            <version>${evanframework.version}</version>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>2.9.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang.version}</version>
+        </dependency>
+
+        <!--&lt;!&ndash; evanframework &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.evanframework</groupId>-->
+            <!--<artifactId>evan-cache</artifactId>-->
+            <!--<version>${evanframework.version}</version>-->
+        <!--</dependency>-->
 
         <!-- auto  -->
         <dependency>
@@ -36,6 +48,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.5.0</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
