--- a/xudong-domain/pom.xml
+++ b/xudong-domain/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.xudong</groupId>
-        <artifactId>server</artifactId>
+        <artifactId>xudong-server</artifactId>
         <version>1.0</version>
     </parent>
 
     <groupId>com.xudong</groupId>
-    <artifactId>domain</artifactId>
+    <artifactId>xudong-domain</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
