--- a/xudong-service/pom.xml
+++ b/xudong-service/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>com.xudong</groupId>
-        <artifactId>server</artifactId>
+        <artifactId>xudong-server</artifactId>
         <version>1.0</version>
     </parent>
 
@@ -17,7 +17,7 @@
         <!-- xudong -->
         <dependency>
             <groupId>com.xudong</groupId>
-            <artifactId>domain</artifactId>
+            <artifactId>xudong-domain</artifactId>
             <version>${xudong-domain.version}</version>
         </dependency>
 
