--- a/xudong-im-domain/pom.xml
+++ b/xudong-im-domain/pom.xml
@@ -19,5 +19,11 @@
             <artifactId>evan-domain</artifactId>
             <version>${evanframework.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>2.1.8.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
