--- a/xudong-im-service/src/main/resources/application.yml
+++ b/xudong-im-service/src/main/resources/application.yml
@@ -27,6 +27,9 @@ spring:
 #      testOnReturn: false
 #      poolPreparedStatements: true
 #      maxPoolPreparedStatementPerConnectionSize: 20
+  data:
+    mongodb:
+      uri: mongodb://btbs_financing:mizhi001@47.96.89.84:27017/btbs_financing
 
   redis:
     host: 47.96.89.84
@@ -52,9 +55,7 @@ spring:
         enabled: true
         max-file-size: 10MB
         max-request-size: 10MB
-  data:
-    mongodb:
-      uri: mongodb://btbs_his:MiZhi001@47.96.89.84:27017/btbs_his
+
 
 security:
   basic:
