--- a/xudong-im-domain/pom.xml
+++ b/xudong-im-domain/pom.xml
@@ -25,5 +25,10 @@
             <version>2.1.8.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
     </dependencies>
 </project>
