--- a/xudong-im-service/pom.xml
+++ b/xudong-im-service/pom.xml
@@ -142,6 +142,12 @@
             <artifactId>ehcache</artifactId>
             <version>2.9.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
     </dependencies>
 
     <build>
