修改 字段名称

--- a/xudong-im-service/src/main/resources/application.yml
+++ b/xudong-im-service/src/main/resources/application.yml
@@ -42,7 +42,7 @@ spring:
         max-active: 16  #最大连接数,0为没有限制
         max-idle: 4   #最大等待连接中的数量, 0为没有限制
         min-idle: 1   #最小等待连接中的数量
-        max-wait: 2000  #最大建立连接等待时间。如果超过此时间将接到异常
+        max-wait: 2000ms  #最大建立连接等待时间。如果超过此时间将接到异常
 #    lettuce:
 #      pool:
 #        max-idle: 2
