--- a/xudong-im-service/src/main/resources/application.yml
+++ b/xudong-im-service/src/main/resources/application.yml
@@ -51,6 +51,8 @@ spring:
 #        max-wait: 2000ms
   jackson:
     default-property-inclusion: non_null
+    serialization:
+      write-dates-as-timestamps: true
   mvc:
     throw-exception-if-no-handler-found: true
     #spring.resources.add-mappings=false
