--- a/xudong-im-service/src/main/resources/application.yml
+++ b/xudong-im-service/src/main/resources/application.yml
@@ -51,8 +51,10 @@ spring:
 #        max-wait: 2000ms
   jackson:
     default-property-inclusion: non_null
+    time-zone: GMT+8
     serialization:
       write-dates-as-timestamps: true
+
   mvc:
     throw-exception-if-no-handler-found: true
     #spring.resources.add-mappings=false
