--- a/xudong-im-service/pom.xml
+++ b/xudong-im-service/pom.xml
@@ -166,6 +166,12 @@
             <artifactId>aspectjrt</artifactId>
             <version>1.9.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.58</version>
+        </dependency>
     </dependencies>
 
     <build>
