客服登录接口

--- a/xudong-im-service/src/main/resources/application.yml
+++ b/xudong-im-service/src/main/resources/application.yml
@@ -88,3 +88,7 @@ logging:
     org.springframework.jdbc.core: TRACE
     com.xudong: debug
 
+mes:
+  api:
+    staff-login: http://115.239.198.226:9998/Account/CustomerDoLogin
+
